Fixed Svg spacing, styling

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     background-color: #E7814B;
     height: 45vh;
 }
-.starter > div, .contain > div {
+.starter > div, .contain > div, .contact {
     width: 70vw;
     margin: auto;
 }
@@ -32,15 +32,17 @@
     justify-content: center;
 }
 svg{
-    height:200px;
-    margin: 0;
+    height:100px;
+    margin: 28px 40px;
 }
 .center{
     text-align: center;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 .projects{
     display:grid;
+    width: 70vw;
+    margin: auto;
     grid-template-columns: [a] 2fr[b] 1fr [c];
 }
 .grid{
